[gd_scene load_steps=9 format=3 uid="uid://b3lxvq5je6nwv"]

[ext_resource type="Script" path="res://enemy.gd" id="1_x5syp"]
[ext_resource type="Texture2D" uid="uid://cuu1u10v5dgcu" path="res://Blobfish Spritesheet.png" id="2_6j4t7"]
[ext_resource type="Script" path="res://enemy_hitbox.gd" id="20_e36u6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pumhm"]
atlas = ExtResource("2_6j4t7")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqqp8"]
atlas = ExtResource("2_6j4t7")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dociw"]
atlas = ExtResource("2_6j4t7")
region = Rect2(64, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qlj28"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pumhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqqp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dociw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqqp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pumhm")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uoco4"]
size = Vector2(29.1052, 12.5137)

[node name="Enemy" type="CharacterBody2D" groups=["enemys"]]
collision_layer = 2
collision_mask = 23
script = ExtResource("1_x5syp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-29, 5)
scale = Vector2(4.1875, 4.5)
sprite_frames = SubResource("SpriteFrames_qlj28")
animation = &"walk"
frame_progress = 0.850172

[node name="Area2D" type="Area2D" parent="." groups=["enemys"]]
position = Vector2(-92, 51)
collision_layer = 2
collision_mask = 23
script = ExtResource("20_e36u6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(63, -42)
scale = Vector2(3.50453, -7.19212)
shape = SubResource("RectangleShape2D_uoco4")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
